--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "vite": "^2"
   },
   "dependencies": {
-    "@galacean/engine": "1.0.0-beta.8"
+    "@galacean/engine": "1.0.0-beta.8",
+    "@galacean/engine-physics-lite": "^1.0.0-beta.18",
+    "@galacean/engine-physics-physx": "1.0.0-beta.18",
+    "@galacean/engine-toolkit-auxiliary-lines": "^0.9.0",
+    "@tweenjs/tween.js": "^21.0.0"
   }
 }
