--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@galacean/engine-physics-lite": "^1.0.0-beta.18",
     "@galacean/engine-physics-physx": "1.0.0-beta.18",
     "@galacean/engine-toolkit-auxiliary-lines": "^0.9.0",
-    "@tweenjs/tween.js": "^21.0.0"
+    "@tweenjs/tween.js": "^21.0.0",
+    "vconsole": "^3.15.1"
   }
 }
